[gd_scene load_steps=6 format=3 uid="uid://3cuwa0nucymx"]

[ext_resource type="Script" path="res://scripts/start_menu.gd" id="1_q4gvt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eyl44"]
bg_color = Color(0.439216, 0.67451, 0.301961, 1)

[sub_resource type="SystemFont" id="SystemFont_8fm3i"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_iqxpo"]
font_names = PackedStringArray("Impact")
font_weight = 100
font_stretch = 50
subpixel_positioning = 0

[sub_resource type="FontVariation" id="FontVariation_hxcs8"]
base_font = SubResource("SystemFont_iqxpo")

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_q4gvt")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_eyl44")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_8fm3i")
theme_override_font_sizes/font_size = 48
text = "Cool game super dooper like"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 48
theme_override_constants/margin_bottom = 48

[node name="NewGameButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = SubResource("FontVariation_hxcs8")
theme_override_font_sizes/font_size = 36
text = "NEW GAME"

[node name="MarginContainer2" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 48

[node name="LoadGameButton" type="Button" parent="Panel/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = SubResource("FontVariation_hxcs8")
theme_override_font_sizes/font_size = 36
text = "LOAD GAME"

[node name="MarginContainer3" type="MarginContainer" parent="Panel/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_bottom = 48

[node name="ExitButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = SubResource("FontVariation_hxcs8")
theme_override_font_sizes/font_size = 36
text = "EXIT"

[connection signal="pressed" from="Panel/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/LoadGameButton" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
